precious next btns added

--- a/index.html
+++ b/index.html
@@ -40,8 +40,15 @@
         >
       </div>
       <div class="main-container">
-        <img src="product.png" alt="Image not found" />
+        <button class="btn-product" onclick="onPrevious()">
+          <i class="fas fa-chevron-left fa-4x product-icon"></i>
+        </button>
+        <img id="product-image" src="product1.png" alt="Image not found" />
+        <button class="btn-product" onclick="onNext()">
+          <i class="fas fa-chevron-right fa-4x product-icon"></i>
+        </button>
       </div>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
